@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: var.test,v 1.35 2010/02/02 00:11:31 dkf Exp $
+# RCS: @(#) $Id: var.test,v 1.36 2010/08/03 17:25:13 andreas_kupries Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -762,6 +762,13 @@ test var-18.1 {array unset and unset traces: Bug 2939073} -setup {
 } -cleanup {
     unset x already
 } -result 0
+
+
+test var-19.1 {crash when freeing locals hashtable: Bug 3037525} {
+    proc foo {} { catch {upvar 0 dummy \$index} }
+    foo ; # This crashes without the fix for the bug
+    rename foo {}
+} {}
 
 catch {namespace delete ns}
 catch {unset arr}
